main.css
/* CSS reset */
* {
    margin: 0;
    padding: 0;
}

body {
    min-width: 400px;
    font-family: arial,sans-serif;
    font: 14px/27px Roboto,RobotoDraft,Arial,sans-serif;
}

a {
    text-decoration: none; 
}

a:hover {
   text-decoration: underline;    
}

.mobile * {
    display: none;
}

.mobile {
    display: none;
}

.header {
    display: flex;
    flex-direction: row;
    align-items: center;
    flex-shrink: 0;
    height: 48px;
    padding: 6px;
    font-size: 14px;
}

.header a {
    color: #222;
    
}

.promo {
    display: inherit;
    align-items: inherit;
    align-content:flex-start;
    padding: 5px;
}

.about {
    margin-left:15px;
}

.store {
    margin-left:20px;
}

.apps {
    display: inherit;
    align-items: inherit;
    margin-left: auto;
    font-size: 13px;
}

.images {
    margin-right: 19px;
    margin-top: -2px;
}

.gmail {
    margin-right: 15px;
    margin-top: -2px;
}

.apps-overflow {
    width: 32px;
    height: 32px;
    padding: 4px;
    margin-right:8px;
    vertical-align: middle;
    border-radius: 50%;
    flex-shrink: 1;
}

.apps-overflow:hover {
    background-color: rgba(0, 0, 0, 0.08);
}

.apps-overflow:focus {
    outline: none;
    background-color: rgba(0, 0, 0, 0.08);
}

.account {
    width: 32px;
    height: 32px;
    padding: 4px;
    margin-right:8px;
    vertical-align: middle;
    border-radius: 50%;
    flex-shrink: 1;
}

.account:hover {
    background-color: rgba(0,0,0,0.08);
}

.account:focus {
    outline: none;
    background-color: rgba(0,0,0,0.08);
}

.account-img {
    border-radius: 50%;
}

.account-img:hover {
    box-shadow: 0 1px 1px rgb(180, 180, 180,0.9);
}

.content {
    padding-left: 20px;
    padding-right: 20px;
}

.logo {
    display: flex;
    flex-direction: column;
    align-items: center;
}
@media only screen and (min-width: 601px) {
    .logo {
        min-height: 92px;
        max-height: 290px;
        height: calc(100vh - 560px);
    }
}

.logo-img {
    margin-top: auto;
    object-position: center bottom;
}


.search-bar {
    border-radius: 24px;
    border-color: #dfe1e5;
    border-width: 1px;
    border-style: solid;
    display: flex;
    height: 44px;
    width: auto;
    max-width: 582px;

    margin: 26px auto 18px auto;
    padding: 0;
}

.search-bar:hover {
    border-color: #fff;
    box-shadow: 0 1px 6px rgb(32, 33, 36, 28%);
}

.search-icon {
    padding-left: 14px;
    margin-top: 12px;
    color: #9AA0A6;
}

.search-input {
    background-color: transparent;
    border: none;
    margin: 0;
    padding: 0;
    color: rgba(0,0,0,.87);
    word-wrap: break-word;
    outline: none;
    display: flex;
    flex: 100%;
    width: 100%;
    height: 34px;
    font-size: 16px;
    margin-left:13px;
    margin-top: 5px;
    margin-right:8px;
}

.voice-icon {
    padding-right: 16px;
    margin-top: 10px;
}

.search-btn {
    background-color: #f8f9fa;
    border: 1px solid #f8f9fa;
    border-radius: 4px;
    color: #3c4043;
    font-family: arial,sans-serif;
    font-size: 14px;
    margin: 11px 4px;
    padding: 0 16px;
    line-height: 27px;
    height: 36px;
    min-width: 54px;
    text-align: center;
    cursor: pointer;
}

.search-btn:hover {
    border-color: rgb(218, 218, 218);
    box-shadow: 0 1px 1px rgb(32, 33, 36, 13%);
}

.search-btn:active {
    border-color: #4285F4;
}

.footer {
    background-color: #f2f2f2;
    color: rgba(0,0,0,.54);
    width:100%;
    position:absolute;
    bottom:0;
}

.footer a {
    color: #70757a;
}

.footer-top {
    display: flex;
    align-items: center;
    padding-left: 30px;
    padding-right: 30px;
    padding-top: 10px;
    padding-bottom: 10px;
    border-bottom: 1px solid #dadce0;
    font-size: 15px;
}

.footer-bottom {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-evenly;
    font-size: 14px;
    min-width: 400px;
    padding: 0 20px;
}

@media only screen and (min-width: 1200px)
{
    .footer-bottom {
        justify-content: space-between;
    }
}

@media only screen and (max-width: 600px)
{
    .footer-bottom {
        
        align-items: center;
    }
}

.footer-bottom-group {
    display: flex;
    align-items: center;
    white-space: nowrap;
}

.footer-bottom a {
    margin: 10px 15px 9px 15px;
}

html[data-useragent*='Chrome'] body {
    background-color: red;
}

@media only screen and (max-device-width: 600px) {
    /* For mobile: */
    body {
        min-width: 260px;
        font-family: Roboto,Helvetica Neue,Arial,sans-serif;
    }

    a:hover {
        text-decoration: none;    
     }

    .mobile * {
        display: block;
    }

    .mobile {
        display: block;
    }

    .desktop {
        display: none;
    }

    .header {
        display: flex;
        flex-direction: row;
        align-items: center;
        flex-shrink: 0;
        padding: 0;
    }

    .hamburger-menu {
        width: 56px;
        height: 51px;
        display: flex;
        flex-direction: column;
        align-items: center;
    }

    .hamburger-menu-icon {
        padding-top: 13px;
    }

    .search-categories > a {
        color: #70757a;
        font-size: 12px;
        font-weight: 600;
        line-height: 45px;
        margin: 1px 4px 0 0;
        padding: 0 8px;
        display: inline-block;
        box-sizing: border-box;
        text-align: center;
    }

    .search-categories > a.active {
        color: #4285f4;
        border-bottom: 2px solid #4285f4;
    }

    .content {
        padding: 0;
    }

    .logo {
        height:56px;
        padding-top: 64px;
    }

    .logo-img {
        min-height: 56px;
        max-height: 56px;
        height: 56px;
        width: 160px;
    }

    .search-bar {
        border-radius: 24px;
        border-color: #dfe1e5;
        border-width: 1px;
        border-style: solid;
        display: flex;
        height: 38px;
        width: 100%vw;
        margin: 26px 8px 18px 8px;
        padding: 0;
    }

    .search-input {
        margin-top: 2px;
        
    }

    .search-icon {
        margin-left: -6px;
        margin-top: 7px;
        height: 24px;
        width: 24px;
    }

    .voice-icon {
        margin-right: -9px;
        margin-top: 8px;
    }

    .search-btn {
        display: none;
    }

    .footer {
        background-color: #f2f2f2;
        color: rgba(0,0,0,.54);
        width:100%;
        position:absolute;
        bottom:-35px;
    }

    .footer-top {
        padding: 0 12px;
        height:36px;
        border-width: 0px;
        font-size: 16px;
    }

    #country {
        margin-top: -1px;
    }
    
    .footer-bottom {
        border-top: 1px solid #dadce0;
        min-width: 260px;
        padding: 10px 0px;
        font-size: 13px;
        
    }

    .footer-bottom-group {
        height: 35px;
    }

    .footer-bottom a {
        margin: 9px 13.5px 9px 13.5px;
    }
  }

